Fix menu item alignment.

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -28,6 +28,7 @@ html {
 .menu-list {
   svg {
     margin-bottom: 4px;
+    height: 1rem;
   }
 
   .icon {
